src/network_policies/test1default-fluidos-consumer-792ecda06a6a487fb2c3b04b1a16c12382e65206099c40f32df8a7313f2ef3affa5532 Egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test1default-fluidos-consumer-792ecda06a6a487fb2c3b04b1a16c12382e65206099c40f32df8a7313f2ef3affa5532
  namespace: default-fluidos-consumer-792ecd
spec:
  policyTypes:
  - Egress
  podSelector: {}
  egress:
  - ports:
    - port: 80
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: default-fluidos-consumer-792ecd
      podSelector:
        matchLabels:
          app: product-catalogue
